--- a/Java/framework/MyBatis/mybatis-study-all/src/main/resources/db.properties
+++ b/Java/framework/MyBatis/mybatis-study-all/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/mybatisdb?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=false
-jdbc.username=root
-jdbc.password=root
+jdbc_driver=com.mysql.cj.jdbc.Driver
+jdbc_url=jdbc:mysql://127.0.0.1:3306/mybatisdb?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+jdbc_username=root
+jdbc_password=root
